@@ -33,10 +33,12 @@
 #define RCSC_TRAINER_CONFIG_H
 
 #include <string>
+#include <iosfwd>
 
 namespace rcsc {
 
 class ParamMap;
+class ParamParser;
 
 /*!
   \class TrainerConfig
@@ -134,13 +136,17 @@ public:
     ~TrainerConfig();
 
     /*!
-      \brief create parameter map
-      \return reference to the parameter map instance
+      \brief set parameter values using param parser instance
+      \param parser param parser instance
      */
-    ParamMap & paramMap()
-      {
-          return *M_param_map;
-      }
+    void parse( ParamParser & parser );
+
+    /*!
+      \brief print help message to the output stream
+      \param os output stream
+      \return output stream
+     */
+    std::ostream & printHelp( std::ostream & os ) const;
 
 private:
     /*!
